--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
 
 
     <!--Ads ID-->
-    <string name="ad_application_id">ca-app-pub-4267772758405704~5055667902</string>
-    <string name="ad_view_id">ca-app-pub-4267772758405704/6766783941</string>
-    <string name="ad_page_id">ca-app-pub-4267772758405704/5343813642</string>
+    <string name="ad_application_id">ca-app-pub-4267772758405704~3745136418</string>
+    <string name="ad_view_id">ca-app-pub-4267772758405704/5663834690</string>
+    <string name="ad_page_id">ca-app-pub-4267772758405704/6463633248</string>
 
     <!--Activity title list-->
     <string name="latest_article">Bài đăng mới nhất</string>
@@ -21,10 +21,11 @@
     <string name="latest_recruitment">Tuyển dụng mới nhất</string>
     <string name="user_profile">Thông tin cá nhân</string>
     <string name="user_article">Thông tin bài viết</string>
-    <string name="user_transaction">Điểm của tôi</string>
+    <string name="user_transaction">Điểm cá nhân</string>
     <string name="license">Điều khoản dịch vụ</string>
     <string name="instruction">Hướng dẫn sử dụng</string>
     <string name="about_us">Về chúng tôi</string>
+    <string name="forget_password">Lấy lại mật khẩu</string>
 
     <!--URL list-->
     <string name="TestURL">http://192.168.1.69:6969/api/gate/index</string>
@@ -41,6 +42,7 @@
     <string name="AddUserArticle">http://192.168.1.69:6969/api/gate/adduserarticle?value=%1$s</string>
     <string name="GetUserTransaction">http://192.168.1.69:6969/api/gate/getusertransaction?value=%1$s</string>
     <string name="SaveRating">http://192.168.1.69:6969/api/gate/saverating?value=%1$s</string>
+    <string name="RecoveryPassword">http://192.168.1.69:6969/api/gate/recoverypassword?value=%1$s</string>
     <string name="LoadAvatar">http://192.168.1.69:6969/Files/avatars/%1$s/avt.jpg</string>
 
     <!--Google API URL list-->
@@ -87,25 +89,12 @@
         Một trong số đó là quyền truy cập vị trí.
         Bạn cần bật vị trí trên điện thoại của mình để ứng dụng có thể chạy được.
     </string>
-    <string name="InsArray">
-        - Một vài danh sách đã được cố định sẵn các phần tử.
-        Khi cần chọn phần tử nào đó trong danh sách, chỉ cần nhập một ký tự.
-        Gợi ý của ứng dụng dựa trên danh sách này.
-        Nếu sau khi cập nhật phiên bản có thay đổi về phần tử của các danh sách này, phần này cũng được cập nhật theo. \n
-        - Ngành nghề: Sinh viên, Đã tốt nghiệp, Giáo viên – Giảng viên \n
-        - Lớp: Lớp 1, Lớp 2, Lớp 3, Lớp 4, Lớp 5, Lớp 6, Lớp 7, Lớp 8, Lớp 9, Lớp 10, Lớp 11, Lớp 12,
-        Lớp tiếng Anh, Lớp tiếng Trung, Lớp tiếng Nhật, Lớp tiếng Hàn, Lớp tiếng Pháp, Lớp tiếng Đức, Lớp tiếng Nga, Lớp tiếng Thái,
-        Lớp bổ túc lái xe, Lớp bơi lội, Lớp võ thuật, Lớp âm nhạc, Lớp hội họa, Lớp tennis, Lớp khác. \n
-        - Môn: Toán, Tin học, Vật lý, Hóa học, Sinh học, Ngữ văn, Lịch sử, Địa lý,
-        Tiếng Anh, Tiếng Trung, Tiếng Nhật, Tiếng Hàn, Tiếng Pháp, Tiếng Đức, Tiếng Nga,
-        Võ thuật, Bơi lội, Âm nhạc, Hội họa, Bóng chuyền, Bóng rổ, Môn khác.
-    </string>
     <string name="InsLatestArticle">
         - Danh sách bài viết giới thiệu bản thân của từng gia sư được hiển thị tại đây.
         Bạn có thể nhìn thấy họ tên, nghề nghiệp, giới tính, thời gian đăng bài, khoảng cách ước tính từ vị trí của bạn và nội dung bài viết được hiển thị ngắn gọn.
         Chạm vào một phần tử trong danh sách sẽ nhìn được thông tin về gia sư đó chi tiết hơn. \n
         - Phần bài đăng mới nhất này được coi như danh mục chính của người dùng trên tư cách là khách hàng cần tìm gia sư.
-        Bạn có thể nhấn nút ở góc trên cùng bên trái hoặc vuốt từ trái qua phải để mở ra danh mục chức năng của ứng dụng.
+        Bạn có thể nhấn nút ở góc trên cùng bên trái hoặc vuốt từ trái qua phải để mở ra danh mục chức năng của ứng dụng hoặc nhấn nút Back của thiết bị để tắt ứng dụng.
     </string>
     <string name="InsUserInformation">
         - Khi chọn một gia sư trong danh sách, bạn sẽ đến với phần thông tin gia sư.
@@ -117,19 +106,15 @@
     <string name="InsSearchUser">
         - Khi bạn muốn tìm một gia sư phù hợp với điều kiện của mình, hãy chọn chức năng tìm kiếm gia sư.
         Phần thiết lập tìm kiếm cho phép bạn có thể lọc theo giới tính, theo ngành nghề, theo lớp, theo môn và chọn sắp xếp theo thời gian từ mới đến cũ hoặc theo khoảng cách từ gần đến xa vị trí hiện tại của bạn. \n
-        - Để tiện lợi hơn cho việc tìm kiếm, bạn chỉ cần viết 1 chữ trong danh sách.
-        Ứng dụng sẽ gợi ý nội dung để bạn chọn lựa cho nhanh nhất.
-        Bạn có thể xem danh sách các phần tử của ngành nghề, lớp, môn tại phần danh sách cố định (trang 2). \n
         - Sau khi nhấn nút tìm kiếm, bạn có thể nhìn thấy được danh sách gia sư phù hợp với điều kiện của mình trong phần kết quả tìm kiếm.
         Giá trị đã lựa chọn để lọc được hiển thị phía trên cùng.
-        Chọn một trong số gia sư trong danh sách kết quả sẽ chuyển bạn đến phần thông tin gia sư (trang 4) như đã nói từ trước.
+        Chọn một trong số gia sư trong danh sách kết quả sẽ chuyển bạn đến phần thông tin gia sư (trang 3) như đã nói từ trước.
     </string>
     <string name="InsRecruitment">
         - Khi bạn không tìm được gia sư nào ưng ý, hoặc không có thời gian để xem chi tiết danh sách từng gia sư, bạn có thể sử dụng chức năng đăng tìm gia sư.
         Phần này giúp bạn tạo một bài viết mô tả các yêu cầu về gia sư mà bạn cần.
         Khi các gia sư đăng nhập ứng dụng, họ sẽ đọc được bài đăng tìm và chủ động liên hệ với bạn. \n
-        - Chọn lớp và môn dựa trên danh sách cố định để tìm kiếm.
-        Hãy chú ý nhập thông tin thật chính xác, đúng với yêu cầu của bạn vì bài đăng của bạn sẽ không thể sửa.
+        - Hãy chú ý nhập thông tin thật chính xác, đúng với yêu cầu của bạn vì bài đăng của bạn sẽ không thể sửa.
         Phần nội dung nên có lịch và thời gian làm việc cụ thể, cũng như yêu cầu riêng của cá nhân.
         Tóm lại, viết càng chi tiết thì tỉ lệ gia sư liên hệ với bạn phù hợp yêu cầu càng cao. 
     </string>
@@ -146,9 +131,9 @@
     </string>
     <string name="InsLatestRecruitment">
         - Sau khi đăng nhập thành công, ứng dụng hiểu bạn đang sử dụng trên tư cách là gia sư.
-        Phần tuyển dụng mới nhất là danh mục chính của gia sư.
+        Phần tuyển dụng mới nhất là danh mục chính của gia sư. Bạn có thể thoát ứng dụng tại đây bằng cách nhấn nút Back của thiết bị.
         Danh mục chức năng của ứng dụng cũng được thay đổi để chỉ dành riêng cho gia sư. \n
-        - Phần này hiển thị danh sách các bài đăng tuyển gia sư của người dùng trên tư cách là khách hàng đã đăng ở phần đăng tìm gia sư (trang 6).
+        - Phần này hiển thị danh sách các bài đăng tuyển gia sư của người dùng trên tư cách là khách hàng đã đăng ở phần đăng tìm gia sư (trang 5).
         Toàn bộ thông tin của bài đăng được hiển thị chi tiết.
         Nếu bạn thấy mình phù hợp với yêu cầu công việc được mô tả, thì có thể chọn bài viết đó trên danh sách để gọi điện trực tiếp tới số điện thoại của khách hàng từ điện thoại của bạn.
     </string>
@@ -163,7 +148,7 @@
         Nếu bạn chưa tạo bài viết này, ứng dụng sẽ có thông báo mỗi khi bạn truy cập tới mục này.
         Mặt khác, ứng dụng sẽ hiển thị thông tin bài viết đã có của bạn. \n
         - Sau khi nhập hoặc chỉnh sửa bài viết, nhấn nút lưu ở góc dưới bên phải để lưu lại. \n
-        - Mỗi khi tạo mới hoặc chỉnh sửa bài viết, ứng dụng sẽ cập nhật thời gian, giúp bài viết của bạn được hiển thị đầu tiên trong danh sách của mục bài đăng mới nhất (trang 3) hoặc danh sách kết quả tìm kiếm được sắp xếp theo thời gian (trang 5).
+        - Mỗi khi tạo mới hoặc chỉnh sửa bài viết, ứng dụng sẽ cập nhật thời gian, giúp bài viết của bạn được hiển thị đầu tiên trong danh sách của mục bài đăng mới nhất (trang 2) hoặc danh sách kết quả tìm kiếm được sắp xếp theo thời gian (trang 4).
         Bạn phải có nhiều hơn 30 điểm cá nhân để thực hiện hành động này.
     </string>
     <string name="InsUserTransaction">
@@ -172,7 +157,7 @@
     </string>
     <string name="InsSignOut">
         - Đăng xuất khỏi tài khoản gia sư.
-        Ứng dụng sẽ hiểu bạn là khách hàng và điều hướng bạn đến danh mục chính của người dùng đó là bài đăng mới nhất (trang 3).
+        Ứng dụng sẽ hiểu bạn là khách hàng và điều hướng bạn đến danh mục chính của người dùng đó là bài đăng mới nhất (trang 2).
     </string>
 
     <!--About us-->
@@ -183,7 +168,7 @@
     </string>
     <string name="AbsCorporation">
         Cty cổ phần tư vấn đầu tư INDC GROUP. \n
-        Địa chị: số 21, ngách ¾ Cầu Bươu, Tả Thanh Oai, Thanh Trì, Hà Nội. \n
+        Địa chỉ: số 21, ngách ¾ Cầu Bươu, Tả Thanh Oai, Thanh Trì, Hà Nội. \n
         Điện thoại liên hệ: 098 982 3388. \n
         Email: indcgroup@gmail.com
     </string>
