--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,22 +28,22 @@
     <string name="forget_password">Lấy lại mật khẩu</string>
 
     <!--URL list-->
-    <string name="TestURL">http://192.168.1.69:6969/api/gate/index</string>
-    <string name="LoginURL">http://192.168.1.69:6969/api/gate/login?value=%1$s</string>
-    <string name="RegisterURL">http://192.168.1.69:6969/api/gate/register?value=%1$s</string>
-    <string name="GetLatestArticleURL">http://192.168.1.69:6969/api/gate/getlatestarticle?value=%1$s</string>
-    <string name="SearchArticleURL">http://192.168.1.69:6969/api/gate/searcharticle?value=%1$s</string>
-    <string name="GetUserInformationURL">http://192.168.1.69:6969/api/gate/getuserinformation?value=%1$s</string>
-    <string name="AddRecruitment">http://192.168.1.69:6969/api/gate/addrecruitment?value=%1$s</string>
-    <string name="GetLatestRecruitmentURL">http://192.168.1.69:6969/api/gate/getlatestrecruitment?value=%1$s</string>
-    <string name="GetUserProfile">http://192.168.1.69:6969/api/gate/getuserprofile?value=%1$s</string>
-    <string name="SaveUserProfile">http://192.168.1.69:6969/api/gate/saveuserprofile?value=%1$s</string>
-    <string name="GetUserArticle">http://192.168.1.69:6969/api/gate/getuserarticle?value=%1$s</string>
-    <string name="AddUserArticle">http://192.168.1.69:6969/api/gate/adduserarticle?value=%1$s</string>
-    <string name="GetUserTransaction">http://192.168.1.69:6969/api/gate/getusertransaction?value=%1$s</string>
-    <string name="SaveRating">http://192.168.1.69:6969/api/gate/saverating?value=%1$s</string>
-    <string name="RecoveryPassword">http://192.168.1.69:6969/api/gate/recoverypassword?value=%1$s</string>
-    <string name="LoadAvatar">http://192.168.1.69:6969/Files/avatars/%1$s/avt.jpg</string>
+    <string name="TestURL">http://giasutot.vn/api/gate/index</string>
+    <string name="LoginURL">http://giasutot.vn/api/gate/login?value=%1$s</string>
+    <string name="RegisterURL">http://giasutot.vn/api/gate/register?value=%1$s</string>
+    <string name="GetLatestArticleURL">http://giasutot.vn/api/gate/getlatestarticle?value=%1$s</string>
+    <string name="SearchArticleURL">http://giasutot.vn/api/gate/searcharticle?value=%1$s</string>
+    <string name="GetUserInformationURL">http://giasutot.vn/api/gate/getuserinformation?value=%1$s</string>
+    <string name="AddRecruitment">http://giasutot.vn/api/gate/addrecruitment?value=%1$s</string>
+    <string name="GetLatestRecruitmentURL">http://giasutot.vn/api/gate/getlatestrecruitment?value=%1$s</string>
+    <string name="GetUserProfile">http://giasutot.vn/api/gate/getuserprofile?value=%1$s</string>
+    <string name="SaveUserProfile">http://giasutot.vn/api/gate/saveuserprofile?value=%1$s</string>
+    <string name="GetUserArticle">http://giasutot.vn/api/gate/getuserarticle?value=%1$s</string>
+    <string name="AddUserArticle">http://giasutot.vn/api/gate/adduserarticle?value=%1$s</string>
+    <string name="GetUserTransaction">http://giasutot.vn/api/gate/getusertransaction?value=%1$s</string>
+    <string name="SaveRating">http://giasutot.vn/api/gate/saverating?value=%1$s</string>
+    <string name="RecoveryPassword">http://giasutot.vn/api/gate/recoverypassword?value=%1$s</string>
+    <string name="LoadAvatar">http://giasutot.vn/Files/avatars/%1$s/avt.jpg</string>
 
     <!--Google API URL list-->
     <string name="Google_GetDistanceURL">https://maps.googleapis.com/maps/api/distancematrix/json?origins=$%1$s&amp;destinations=$%2$s</string>
@@ -108,7 +108,7 @@
         Phần thiết lập tìm kiếm cho phép bạn có thể lọc theo giới tính, theo ngành nghề, theo lớp, theo môn và chọn sắp xếp theo thời gian từ mới đến cũ hoặc theo khoảng cách từ gần đến xa vị trí hiện tại của bạn. \n
         - Sau khi nhấn nút tìm kiếm, bạn có thể nhìn thấy được danh sách gia sư phù hợp với điều kiện của mình trong phần kết quả tìm kiếm.
         Giá trị đã lựa chọn để lọc được hiển thị phía trên cùng.
-        Chọn một trong số gia sư trong danh sách kết quả sẽ chuyển bạn đến phần thông tin gia sư (trang 3) như đã nói từ trước.
+        Chọn một trong số gia sư trong danh sách kết quả sẽ chuyển bạn đến phần thông tin gia sư như đã nói từ trước.
     </string>
     <string name="InsRecruitment">
         - Khi bạn không tìm được gia sư nào ưng ý, hoặc không có thời gian để xem chi tiết danh sách từng gia sư, bạn có thể sử dụng chức năng đăng tìm gia sư.
@@ -127,13 +127,16 @@
     <string name="InsSignIn">
         - Sử dụng tên đăng nhập và mật khẩu đã đăng ký với hệ thống để đăng nhập. \n
         - Khi đăng nhập thành công, ứng dụng sẽ lưu lại thông tin đăng nhập của bạn.
-        Lần sau chỉ cần nhấn nút đăng nhập mà không cần điền lại bất cứ thông tin nào.
+        Lần sau chỉ cần nhấn nút đăng nhập mà không cần điền lại bất cứ thông tin nào. \n
+        - Nếu bạn quên mật khẩu đăng nhập của mình, hãy nhấn vào chữ Quên mật khẩu trên màn hình.
+        Nhập thông tin tên đăng nhập và email bạn đã đăng ký trước đó.
+        Nếu trùng khớp thì hệ thống sẽ gửi thông tin về mật khẩu hiện tại của bạn vào email bằng địa chỉ hotro.giasutot@gmail.com
     </string>
     <string name="InsLatestRecruitment">
         - Sau khi đăng nhập thành công, ứng dụng hiểu bạn đang sử dụng trên tư cách là gia sư.
         Phần tuyển dụng mới nhất là danh mục chính của gia sư. Bạn có thể thoát ứng dụng tại đây bằng cách nhấn nút Back của thiết bị.
         Danh mục chức năng của ứng dụng cũng được thay đổi để chỉ dành riêng cho gia sư. \n
-        - Phần này hiển thị danh sách các bài đăng tuyển gia sư của người dùng trên tư cách là khách hàng đã đăng ở phần đăng tìm gia sư (trang 5).
+        - Phần này hiển thị danh sách các bài đăng tuyển gia sư của người dùng trên tư cách là khách hàng đã đăng ở phần đăng tìm gia sư.
         Toàn bộ thông tin của bài đăng được hiển thị chi tiết.
         Nếu bạn thấy mình phù hợp với yêu cầu công việc được mô tả, thì có thể chọn bài viết đó trên danh sách để gọi điện trực tiếp tới số điện thoại của khách hàng từ điện thoại của bạn.
     </string>
@@ -143,12 +146,12 @@
         Nhấn nút lưu ở góc phải phía dưới màn hình để lưu lại những thông tin đã sửa đổi.
     </string>
     <string name="InsUserArticle">
-        - Phần này chính là bài viết giới thiệu bản thân mà khách hàng nhìn thấy đầu tiên khi khởi động ứng dụng (trang 3).
+        - Phần này chính là bài viết giới thiệu bản thân mà khách hàng nhìn thấy đầu tiên khi khởi động ứng dụng.
         Sau khi đăng ký tài khoản, hãy tạo cho mình một bài viết giới thiệu bản thân thật chi tiết và đặc biệt để lấy được sự chú ý từ khách hàng.
         Nếu bạn chưa tạo bài viết này, ứng dụng sẽ có thông báo mỗi khi bạn truy cập tới mục này.
         Mặt khác, ứng dụng sẽ hiển thị thông tin bài viết đã có của bạn. \n
         - Sau khi nhập hoặc chỉnh sửa bài viết, nhấn nút lưu ở góc dưới bên phải để lưu lại. \n
-        - Mỗi khi tạo mới hoặc chỉnh sửa bài viết, ứng dụng sẽ cập nhật thời gian, giúp bài viết của bạn được hiển thị đầu tiên trong danh sách của mục bài đăng mới nhất (trang 2) hoặc danh sách kết quả tìm kiếm được sắp xếp theo thời gian (trang 4).
+        - Mỗi khi tạo mới hoặc chỉnh sửa bài viết, ứng dụng sẽ cập nhật thời gian, giúp bài viết của bạn được hiển thị đầu tiên trong danh sách của mục bài đăng mới nhất hoặc danh sách kết quả tìm kiếm được sắp xếp theo thời gian.
         Bạn phải có nhiều hơn 30 điểm cá nhân để thực hiện hành động này.
     </string>
     <string name="InsUserTransaction">
@@ -157,7 +160,7 @@
     </string>
     <string name="InsSignOut">
         - Đăng xuất khỏi tài khoản gia sư.
-        Ứng dụng sẽ hiểu bạn là khách hàng và điều hướng bạn đến danh mục chính của người dùng đó là bài đăng mới nhất (trang 2).
+        Ứng dụng sẽ hiểu bạn là khách hàng và điều hướng bạn đến danh mục chính của người dùng đó là bài đăng mới nhất.
     </string>
 
     <!--About us-->
